objects/QIDC__Sales_Request_ims__c.object
<CustomObject>
    <description>The Sales Request object is used to store the marketing journeys&apos; target information</description>
    <fields>
        <fullName>QIDC__Account_ims__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Look up to Account object for the Person Accounts</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Requests</relationshipLabel>
        <relationshipName>Sales_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QIDC__IntegrationID_ims__c</fullName>
        <description>External ID which is used for data loading only</description>
        <externalId>true</externalId>
        <label>Integration Id</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QIDC__Journey_ExternalID_ims__c</fullName>
        <description>Integration Id of Journey</description>
        <formula>QIDC__Journey_ims__r.QIDC__IntegrationID_ims__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Journey External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Journey_ims__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The reference id for Journey</description>
        <label>Journey</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>QIDC__Journey_ims__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Journey</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>QIDC__Journey_ims__c</referenceTo>
        <relationshipLabel>Sales Requests</relationshipLabel>
        <relationshipName>Sales_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QIDC__Status_ims__c</fullName>
        <description>Status of the &quot;sales request&quot; push to Marketing system. Pending (yet to pushed to marketing), Synced (pushed successfully to marketing), Refreshed (updated the response back in CRM), Failed (failed to push to marketing)</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Synced</fullName>
                </value>
                <value>
                    <fullName>Refreshed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__User_Email_ims__c</fullName>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__User_Name_ims__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <label>Sales Request</label>
    <listViews>
        <fullName>QIDC__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Sales Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>